# MagicSquare_22

./: .cursorrules  .gitignore  README.md  defect_list.md  pyproject.toml
Prompting/: 01-problem-definition-prompt.md  02-tdd-design-prompt.md  03-cursor-rules-implementation-prompt.md  04-magicsquare-rules-consolidation-prompt.md  05-cursor-agents-prompt-set-prompt.md  06-user-journey-to-scenario-verification-prompt.md  07-prd-creation-and-review-prompt.md  08-test-plan-red-phase-prompt.md  09-dual-track-red-design-prompt.md  10-dual-track-red-skeleton-prompt.md  11-coverage-html-qa-prompt.md  12-ac-fr01-01-green-phase-prompt.md  13-green-phase-readme-plan-prompt.md  14-green-completion-pyqt-gui-prompt.md  15-golden-master-regression-prompt.md  16-refactor-plan-ecb-analysis-prompt.md  17-refactor-completion-prompt.md  18.MagicSquare_Ask-Coverage-QA_Prompt_Transcript.md
Report/: 01-problem-definition-report.md  02-tdd-design-report.md  03-cursor-rules-and-implementation-report.md  04-magicsquare-rules-consolidation-report.md  05-cursor-agents-prompt-set-report.md  06-user-journey-to-scenario-verification-report.md  07-prd-creation-and-review-report.md  08-test-plan-red-phase-report.md  09-dual-track-red-design-report.md  10-dual-track-red-skeleton-report.md  11-coverage-html-qa-report.md  12-ac-fr01-01-green-phase-report.md  13-green-phase-readme-plan-report.md  14-green-completion-pyqt-gui-report.md  15-golden-master-regression-report.md  16-refactor-plan-ecb-analysis-report.md  17-refactor-completion-report.md  18.MagicSquare_Ask-Coverage-QA_Report.md
(+77 files in other folders)
