[project]
name = "magicsquare"
version = "0.1.0"
description = "4x4 Magic Square — ECB + Dual-Track TDD learning project"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pydantic>=2.0"]
gui = ["PyQt6>=6.6"]

[project.scripts]
magicsquare-gui = "magicsquare.boundary.gui.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "golden_master: Golden Master / approval regression tests (GM-TC-*)",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
